# aod_detection

./: .gitignore  README.md  software_archive.txt
blender_automation/: create_tree.py  create_tree_auto.py
blender_automation/bark/renderings/labels/: render_camera_1_20240903080336.txt  (+13 more)
blender_automation/bark/scripts/: check_labels.py
model/data_specs/: augment_data.ipynb  augmented_data.txt  real.txt  synthetic.txt
model/results/: augmented_results_training.csv  combined_results_training.csv  plot_results.py  plot_training_results.py  real_results_training.csv  results_augmented_combined.csv  results_combined.csv  results_real.csv  stats_augmented_combined.csv  stats_combined.csv  stats_real.csv
model/yolo_mods/: dataloaders.py  metrics.py
offline_testing/: drone_live_stream.py  measure_fps.py  requirements.txt
ros2_ws/: build_packages.sh  launch_simulation.sh  set_up_environment.sh
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/drone_video_feed/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_video_feed/config/: control.yaml  quadcopter_camera.rviz
ros2_ws/src/drone_video_feed/drone_video_feed/: quadcopter_controller.py
ros2_ws/src/drone_video_feed/launch/: launch.py
ros2_ws/src/drone_video_feed/models/blender_tree/: model.config  model.sdf
ros2_ws/src/drone_video_feed/models/quadcopter_with_camera/: model.config  model.sdf
ros2_ws/src/drone_video_feed/worlds/: base_world.world  latest.world
(+9 files in other folders)
