<?xml version="1.0"?>
<package format="3">
  <name>drone_video_feed</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for processing drone video feed with machine learning</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <depend>torch</depend>
  <depend>ultralytics</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
